<resources>
    <string name="app_name">Blood Donation</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="createNew">Don\'t have an account? Create new</string>
    <string name="email">Email</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="alreadyRegistered">Already have an account? Login here</string>
    <string name="register">Register</string>
    <string name="phone">Phone</string>
    <string name="blood_group">Blood Group</string>
    <string name="address">Address</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="last_donation_date">Last Donation Date</string>
    <string name="logo">logo</string>
    <string name="search_donor">Search Donor</string>
    <string name="description">This Project is created for Object Oriented Programming Lab.</string>
    <string name="teamMember">Shahidul Ahad Sakib\nSarmin Akter \nMd Milon Mia \nZahidul Islam \nMonjurul Islam Munna</string>
    
    
    <string name="title_1">Why Should You Donate Blood?</string>
    <string name="title_2">Who Can Give Blood?</string>
    <string name="title_3">When You Should Not Donate Blood?</string>
    <string name="title_4">Is Giving Blood Safe?</string>
    <string name="title_5">Does It Hurt?</string>
    <string name="title_6">What Happens When You Give Blood?</string>
    <string name="title_7">How Will You Feel After Giving Blood?</string>
    <string name="title_8">Can You Give Blood After Vaccination Against SARS-CoV-2?</string>


    <string name="details_1">Safe blood saves lives. Blood is needed by women with complications during pregnancy and childbirth, children with severe anaemia, often resulting from malaria or malnutrition, accident victims and surgical and cancer patients. \n\nThere is a constant need for a regular supply of blood because it can be stored only for a limited period of time before use. Regular blood donation by a sufficient number of healthy people is needed to ensure that blood will always be available whenever and wherever it is needed.\n\nBlood is the most precious gift that anyone can give to another person – the gift of life. A decision to donate your blood can save a life, or even several if your blood is separated into its components – red cells, platelets and plasma – which can be used individually for patients with specific conditions.</string>
    <string name="details_2">The criteria for donor selection varies from country to country, but blood can be donated by most people who are healthy and do not have an infection that can be transmitted through their blood.\n\nThe age at which people are eligible to give blood varies, but is commonly between the ages of 17 and 65. Some countries accept donations from people from the age of 16 and extend the upper age limit beyond 65 years.\n\nHealthy adults can give blood regularly – at least twice a year. Your local blood service can tell you how frequently you can give blood.</string>
    <string name="details_3">The blood service is concerned with the welfare of both the blood donor and the recipient. Donors are often asked not to donate blood for a period of time in the interests of their safety and/or that of the blood supply. \n\nYou should not give blood if your own health might suffer as a result. The first concern of the blood service is to ensure that blood donation does no harm to the blood donor. You should not donate blood if: \n\u25CF You are feeling unwell \n\u25CF You are anaemic \n\u25CF You are pregnant, have been pregnant within the last year or are breastfeeding \n\u25CF You have certain medical conditions, which might make you an unsuitable donor \n\u25CF You are taking certain medications, such as antibiotics. \n\nYou may be able to donate blood at a later time. In some cases, however, in order to protect your own health you will not be able to donate blood. \n\nYou should not donate blood if it might cause harm to the patient who receives it. Blood can transmit life-threatening infections to patients who receive blood transfusions. You should not donate blood if: \n\u25CF You have or may recently have contracted a sexually transmitted disease, such as HIV or syphilis, that can be passed on to a patient who receives your blood \n\u25CF Your lifestyle puts you at risk of contracting an infection that can be transmitted through your blood: for example, if you have more than one sexual partner or have sexual contact with prostitutes \n\u25CF You have ever injected recreational, non-medicinal drugs \n\u25CF You have recently had a tattoo, skin scarification or ear or body piercing – your local blood service can tell you how long you must wait before giving blood \n\u25CF You have had sexual contact with anyone in the above categories.</string>
    <string name="details_4">Yes. Remember that you will only be accepted as a blood donor if you are fit and well. Your health and well-being are very important to the blood service. The needle and blood bag used to collect blood come in a sterile pack that cannot be reused, so the process is made as safe as possible.</string>
    <string name="details_5">Just squeeze the inside of your elbow tightly and you will get a quick idea of what the needle feels like. All you should feel is a gentle pressure and a momentary “pinprick” sensation. Blood donation is very safe and discomfort or problem during or after donating is very uncommon.</string>
    <string name="details_6">Whether you are a first-time or regular donor, the blood service must make sure that you will come to no harm by donating blood. This includes checking your blood to be sure it will be safe for the person who receives it. \n\nBefore you give blood, you will be asked questions about your medical history, including any medication you are taking, and about your current health and lifestyle. You may also be asked about recent travel; for example, if you live in a country where there is no malaria, you may be asked whether you have recently visited a tropical country. These questions will be asked only to safeguard your own health and the health of the person receiving your blood. You will be told whether you are eligible to give blood and, if not, whether you may be able to donate blood in the future. Any personal information that you give will be kept confidential and will not be used for any other purpose. \n\nIt is very important to be truthful about any reasons why your blood might not be suitable. Although blood is always tested for infections that can be transmitted by transfusion, such as HIV, hepatitis B and C, and syphilis, a test may not be able to detect a very recent infection. This means that even though the blood may test negative for a particular infection, it might still infect a patient receiving a blood transfusion. \n\nAfter answering the questions you will also be given a brief medical examination that may include checking your pulse and blood pressure and ensuring that your weight meets a certain minimum. A drop of blood will then be taken from your fingertip to check that giving blood will not make you anaemic. Your health is very important to the blood transfusion service and blood will not be taken unless you can safely give a donation that day. \n\nDonating blood is very simple. You will be made as comfortable as possible, usually in a special chair or on a bed. The area inside one of your elbows will be cleaned with an antiseptic solution before a trained health worker inserts a sterile needle, connected to a blood collection bag, into your vein. It usually takes about 10 minutes to donate blood. \n\nAfter resting for 10 or 15 minutes and taking some refreshment, you will be able to return to your normal activities, although you should avoid strenuous activity for the rest of the day. You should drink plenty of fluids over the next 24 hours.</string>
    <string name="details_7">You should feel great for selflessly giving someone the gift of blood.</string>
    <string name="details_8">Consistent with current general global practice,recipients of SARS-CoV-2 vaccines that do not contain live virus may donate blood if they feel well.As SARS-CoV-2 vaccines have been developed only recently, in settings where deferrals would not compromise blood supply availability,the National Blood Transfusion Service may consider implementing a precautionary deferral period of up to seven days to minimize the impact of call-backs from donors who develop symptoms subsequent to donating soon after vaccination.\n\nRecipients of live virus vaccines should be deferred for four weeks, consistent with current practices. \n\nPersons who feel unwell after receiving a SARS-CoV-2 vaccine should be deferred for seven days after complete resolution of symptoms, or as specified after receipt of a virus vector-based or live-attenuated vaccine, whichever is the longer period. \n\nIn situations where it cannot be established whether the donor received a live virus vaccine, a four-week deferral period should be applied.</string>


    </resources>